--- a/index.html
+++ b/index.html
@@ -12,11 +12,23 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/777bc502e7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <nav>
+                <a href="index.html" class="logo">
+                    <img src="images/logo/Booki.png" alt="logo Booki">
+                    
+                </a>
+                    <div class="div-header">
+                        <div class="div-header"><a href=""class="liens-header">Hébergements</a></div>
+                        <div class="div-header"><a href=""class="liens-header">Activités</a></div>
+                    </div>    
+            </nav>
+        </i></header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
