--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <input type="text">
                                 <input type="submit" value="Rechercher">
                 </form>
-                    <article>
+                    <article class="article-recherche">
                             <h2>Filtres</h2>                        
                              <ul class="ul-filtres">
                                 <li class="choix-filtre"><i class="fa-solid fa-money-bill-wave"></i>Economique</li>
@@ -48,12 +48,137 @@
                              </ul>
                     </article>    
             <p class="i500"><i class="fa-solid fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>    
-                            
+<!------------------------------------------------------------------------------------------------------------------------------------->                           
           
-          <div class="hebergements-and-populaires">
+            <div class="hebergements-and-populaires">
                 <section class="hebergements">
-                    <h2>Hébergements à Marseille</h2>
+                    <div class="hebergements-title">
+                        <h2 class="section-hebergement-title">Hébergements à Marseille</h2>
+                    </div>
+                    <div class="hebergements-cards">
+                        <div class="box1">
+                            <a href="#">
+                                <article class="card2">
+                                    <img src="images/hebergements/fred-kleber.jpg" alt="Image de la chambre hôtel du port">
+                                    <div class="card-content2">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Hôtel du port</h3>
+                                            <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
+                                        </div>
+                                        <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
+                                    </div>                            
+                                </article>
+                            </a>
+                            <a href="#">
+                                <article class="card2">
+                                    <img src="images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel chez Amina">
+                                    <div class="card-content2">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Hôtel chez Amina</h3>
+                                            <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
+                                        </div>
+                                        <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
+                                    </div>                            
+                                </article>
+                            </a>
+                            <a href="#">
+                                <article class="card2">
+                                    <img src="images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel reisetopia">
+                                    <div class="card-content2">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Hôtel Les mouettes</h3>
+                                            <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
+                                        </div>
+                                        <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
+                                    </div>                            
+                                </article>
+                            </a>
+                        </div>
+                        <div class="box2">   
+                            <a href="#">
+                                <article class="card2">
+                                    <img src="images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel Annie spratt">
+                                    <div class="card-content2">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Hôtel de la mer</h3>
+                                            <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
+                                        </div>
+                                        <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
+                                    </div>                            
+                                </article>
+                            </a>
+                            <a href="#">
+                                <article class="card2">
+                                    <img src="images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel Marcus Loke">
+                                    <div class="card-content2">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Auberge La Canebière</h3>
+                                            <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
+                                        </div>
+                                        <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
+                                    </div>                            
+                                </article>
+                            </a>
+                            <a href="#">
+                                <article class="card2">
+                                    <img src="images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel Nicate lee">
+                                    <div class="card-content2">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Auberge Le Panier</h3>
+                                            <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
+                                        </div>
+                                        <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
+                                    </div>                            
+                                </article>
+                            </a>
+                        </div>     
+                    </div>
+                    <h3>Afficher plus</h3>
                 </section>
+
+<!----------------------------------------------------------------------------------------------------------------------------------------------------------------------->                                
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
@@ -116,6 +241,52 @@
                     </div>
                 </section>
             </div>
+<!-------------------------------------------------------------------------------->
+            <div class="activités-marseilles">
+                <h3>Activités à Marseilles</h2>  
+                    <section class="box-activites">
+                        <a href="#">
+                            <article class="card3">
+                                <img src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Vieux-Port</h3>
+                                    </div>
+                                </div>                            
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="card3">
+                                <img src="./images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Fort de Pomègues</h3>
+                                    </div>
+                                </div>                            
+                            </article>
+                        </a> 
+                        <a href="#">
+                            <article class="card3">
+                                <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Parc national des Calanques</h3>
+                                    </div>
+                                </div>                            
+                            </article>
+                        </a> 
+                        <a href="#">
+                            <article class="card3">
+                                <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Notre-Dame-de-la-Garde</h3>
+                                    </div>
+                                </div>                            
+                            </article>
+                        </a>  
+                    </section>
+            </div>    
         </main>
         <footer>
 
