--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <main>
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p class="p-titre">En plein centre-ville ou en pleine nature</p>
-                    <form method="get" action="">
+                    <form method="get" action="#">
                         <label for="recherche" class="dot-loc"><i class="fa-solid fa-location-dot"></i></label>
                                     <input type="search" name="recherche" id="recherche" placeholder="Marseille, France">
                                     <div class="search-icone">
